第五课 microblog 修复 1、Message 数据结构，与其他blog数据结构同步 2、增加异常的try catch 处理

--- a/course5/microblog/src/microblog_assets/src/index.html
+++ b/course5/microblog/src/microblog_assets/src/index.html
@@ -12,7 +12,7 @@
     <header><h1>This is the microblog of student No.86</h1>
     </header>
     <main>
-      <label> Author：</label><label id="author_name"></label><label> &nbsp;&nbsp;&nbsp; My blog CanisterID：</label> <label id="canisterid"></label>
+      <label> My Name：</label><label id="author_name"></label><label> &nbsp;&nbsp;&nbsp; My blog CanisterID：</label> <label id="canisterid"></label>
       <br>
       <br>
       <label for="message">Please enter the message you want to send</label>
