第五课 microblog 优化UI显示

--- a/course5/microblog/src/microblog_assets/src/index.html
+++ b/course5/microblog/src/microblog_assets/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   </head>
   <body>
-    <header><h1>This is the microblog of student No.86</h1>
+    <header><h1>This is the <label id="my_blog"></label>’ blog</h1>
     </header>
     <main>
       <label> My Name：</label><label id="author_name"></label><label> &nbsp;&nbsp;&nbsp; My blog CanisterID：</label> <label id="canisterid"></label>
@@ -27,7 +27,7 @@
       <section id="posts"></section>
       <h3>Following List</h3>
       <section id="follows"></section>
-      <h3>Timeline</h3>
+      <h3>Timeline <label id="blogName"></label></h3>
       <section id="timeline"></section>
     </main>
   </body>
