1、优化日志查询bug 2、更新Readme.md

--- a/part2/course1/ext-logger/demo/src/demo_assets/src/index.html
+++ b/part2/course1/ext-logger/demo/src/demo_assets/src/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <main>
-      <header><h1>IC 自动扩展Canister日志</h1>
+      <header><h1>IC Canister 自动扩展日志</h1>
       </header>
       <main>
-        <label> 日志统计：</label><label id="logger_stats"></label>
+        <label> 日志统计>> </label><label id="logger_stats"></label>
         <br>
         <br>
         <div>
